--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
         </div>
           <div class="social-item">
-            <a href="#"><img src="C:\Users\RANJITH\Desktop\MRANJITH PORTFOLIO\img\download (4).jpg" /></a>
+            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/download (4).jpg" /></a>
           </div>  
           <div class="social-item">
             <a href="#"><img src="C:\Users\RANJITH\Desktop\MRANJITH PORTFOLIO\img\images (2).jpg" /></a>
