--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="C:\Users\RANJITH\Desktop\MRANJITH PORTFOLIO\img\image1.jpg" alt="img">
+          <img src="./img/image1.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -147,10 +147,10 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
         </div>
           <div class="social-item">
-            <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/download (4).jpg" /></a>
+            <a href="#"><img src="./img/download (4).jpg" /></a>
           </div>  
           <div class="social-item">
-            <a href="#"><img src="C:\Users\RANJITH\Desktop\MRANJITH PORTFOLIO\img\images (2).jpg" /></a>
+            <a href="#"><img src="./img/images (2).jpg" /></a>
           </div>
       </div>
     </div>
